--- a/spec/fixtures/vcr_cassettes/Area/can_return_a_single_area_information_and_av_risk.yml
+++ b/spec/fixtures/vcr_cassettes/Area/can_return_a_single_area_information_and_av_risk.yml
@@ -19,7 +19,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Wed, 09 Nov 2022 23:12:51 GMT
+      - Wed, 09 Nov 2022 23:12:53 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -39,7 +39,7 @@ http_interactions:
       Access-Control-Allow-Methods:
       - GET, POST, PUT, DELETE, OPTIONS
       X-Cache:
-      - HIT
+      - EXPIRED
     body:
       encoding: ASCII-8BIT
       string: '{"type":"FeatureCollection","features":[{"type":"Feature","id":419,"properties":{"name":"Olympics","center":"Northwest
@@ -83,7 +83,7 @@ http_interactions:
         for signs of unstable snow such as recent avalanches, cracking in the snow,
         and audible collapsing. Avoid traveling on or under similar slopes.","danger":"no
         rating","danger_level":-1,"color":"#888888","stroke":"#104efb","font_color":"#ffffff","link":"http:\/\/www.nwac.us\/avalanche-forecast\/#\/east-slopes-south","start_date":"2022-11-04T22:00:00","end_date":"2022-11-17T02:30:00","fillOpacity":0.5,"fillIncrement":0.1,"warning":{"product":null}},"geometry":{"type":"Polygon","coordinates":[[[-121.2752,47.1902],[-120.9853,47.079],[-120.7385,46.9962],[-120.7286,46.7882],[-120.7285,46.7724],[-120.7361,46.7588],[-120.7936,46.741],[-120.8262,46.7186],[-120.8545,46.6792],[-120.8484,46.5267],[-120.9109,46.4125],[-120.9833,46.1317],[-121.1595,46.0161],[-121.5113,45.8909],[-121.4199,46.1756],[-121.4012,46.2637],[-121.3836,46.2947],[-121.3318,46.3882],[-121.3398,46.5612],[-121.2895,46.6344],[-121.3471,46.7218],[-121.4041,46.7863],[-121.4584,46.8417],[-121.456,46.8917],[-121.4368,46.9169],[-121.4054,46.9414],[-121.2975,47.1426],[-121.2752,47.1902]]]}}],"start_time":null,"end_time":null}'
-  recorded_at: Wed, 09 Nov 2022 23:12:51 GMT
+  recorded_at: Wed, 09 Nov 2022 23:12:53 GMT
 - request:
     method: get
     uri: https://api.avalanche.org/v2/public/products/map-layer/NWAC
@@ -103,7 +103,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Wed, 09 Nov 2022 23:12:51 GMT
+      - Wed, 09 Nov 2022 23:12:53 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -167,7 +167,7 @@ http_interactions:
         for signs of unstable snow such as recent avalanches, cracking in the snow,
         and audible collapsing. Avoid traveling on or under similar slopes.","danger":"no
         rating","danger_level":-1,"color":"#888888","stroke":"#104efb","font_color":"#ffffff","link":"http:\/\/www.nwac.us\/avalanche-forecast\/#\/east-slopes-south","start_date":"2022-11-04T22:00:00","end_date":"2022-11-17T02:30:00","fillOpacity":0.5,"fillIncrement":0.1,"warning":{"product":null}},"geometry":{"type":"Polygon","coordinates":[[[-121.2752,47.1902],[-120.9853,47.079],[-120.7385,46.9962],[-120.7286,46.7882],[-120.7285,46.7724],[-120.7361,46.7588],[-120.7936,46.741],[-120.8262,46.7186],[-120.8545,46.6792],[-120.8484,46.5267],[-120.9109,46.4125],[-120.9833,46.1317],[-121.1595,46.0161],[-121.5113,45.8909],[-121.4199,46.1756],[-121.4012,46.2637],[-121.3836,46.2947],[-121.3318,46.3882],[-121.3398,46.5612],[-121.2895,46.6344],[-121.3471,46.7218],[-121.4041,46.7863],[-121.4584,46.8417],[-121.456,46.8917],[-121.4368,46.9169],[-121.4054,46.9414],[-121.2975,47.1426],[-121.2752,47.1902]]]}}],"start_time":null,"end_time":null}'
-  recorded_at: Wed, 09 Nov 2022 23:12:51 GMT
+  recorded_at: Wed, 09 Nov 2022 23:12:53 GMT
 - request:
     method: get
     uri: https://api.openweathermap.org/data/3.0/onecall?appid=da340bec0df452f76f0fd81ae3215450&exclude=minutely,hourly&lat=47.98&lon=-123.49&units=imperial
@@ -189,7 +189,7 @@ http_interactions:
       Server:
       - openresty
       Date:
-      - Wed, 09 Nov 2022 23:12:52 GMT
+      - Wed, 09 Nov 2022 23:12:53 GMT
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -206,7 +206,7 @@ http_interactions:
       - GET, POST
     body:
       encoding: UTF-8
-      string: '{"lat":47.98,"lon":-123.49,"timezone":"America/Los_Angeles","timezone_offset":-28800,"current":{"dt":1668035572,"sunrise":1668006682,"sunset":1668041059,"temp":26.56,"feels_like":21.09,"pressure":1021,"humidity":73,"dew_point":19.94,"uvi":0.52,"clouds":0,"visibility":10000,"wind_speed":4.61,"wind_deg":90,"weather":[{"id":800,"main":"Clear","description":"clear
+      string: '{"lat":47.98,"lon":-123.49,"timezone":"America/Los_Angeles","timezone_offset":-28800,"current":{"dt":1668035573,"sunrise":1668006682,"sunset":1668041059,"temp":26.56,"feels_like":21.09,"pressure":1021,"humidity":73,"dew_point":19.94,"uvi":0.52,"clouds":0,"visibility":10000,"wind_speed":4.61,"wind_deg":90,"weather":[{"id":800,"main":"Clear","description":"clear
         sky","icon":"01d"}]},"daily":[{"dt":1668020400,"sunrise":1668006682,"sunset":1668041059,"moonrise":1668043140,"moonset":1668012060,"moon_phase":0.54,"temp":{"day":29.62,"min":16.41,"max":29.62,"night":19.11,"eve":24.33,"morn":18.68},"feels_like":{"day":26.53,"night":12.65,"eve":19.99,"morn":12.52},"pressure":1018,"humidity":67,"dew_point":21.11,"wind_speed":4.54,"wind_deg":187,"wind_gust":4.61,"weather":[{"id":800,"main":"Clear","description":"clear
         sky","icon":"01d"}],"clouds":10,"pop":0,"uvi":1.4},{"dt":1668106800,"sunrise":1668093175,"sunset":1668127379,"moonrise":1668131580,"moonset":1668102660,"moon_phase":0.58,"temp":{"day":30.33,"min":18.93,"max":31.23,"night":24.13,"eve":23.85,"morn":19.72},"feels_like":{"day":30.33,"night":24.13,"eve":23.85,"morn":13.39},"pressure":1028,"humidity":67,"dew_point":24.73,"wind_speed":4.54,"wind_deg":193,"wind_gust":5.19,"weather":[{"id":802,"main":"Clouds","description":"scattered
         clouds","icon":"03d"}],"clouds":37,"pop":0,"uvi":1.53},{"dt":1668193200,"sunrise":1668179668,"sunset":1668213701,"moonrise":1668220500,"moonset":1668192900,"moon_phase":0.61,"temp":{"day":29.21,"min":23.77,"max":30.7,"night":25.03,"eve":25.7,"morn":25.43},"feels_like":{"day":25.68,"night":20.97,"eve":25.7,"morn":25.43},"pressure":1020,"humidity":80,"dew_point":28.15,"wind_speed":3.42,"wind_deg":68,"wind_gust":4.74,"weather":[{"id":804,"main":"Clouds","description":"overcast
@@ -215,53 +215,5 @@ http_interactions:
         clouds","icon":"04d"}],"clouds":80,"pop":0,"uvi":1.29},{"dt":1668452400,"sunrise":1668439143,"sunset":1668472680,"moonrise":1668490380,"moonset":1668460140,"moon_phase":0.7,"temp":{"day":28.67,"min":24.98,"max":30.92,"night":25.02,"eve":28.02,"morn":25.43},"feels_like":{"day":28.67,"night":21.11,"eve":28.02,"morn":25.43},"pressure":1028,"humidity":84,"dew_point":28.78,"wind_speed":3.51,"wind_deg":36,"wind_gust":3.47,"weather":[{"id":804,"main":"Clouds","description":"overcast
         clouds","icon":"04d"}],"clouds":98,"pop":0,"uvi":2},{"dt":1668538800,"sunrise":1668525634,"sunset":1668559010,"moonrise":1668580800,"moonset":1668548160,"moon_phase":0.73,"temp":{"day":32.34,"min":23.97,"max":35.49,"night":28.2,"eve":29.84,"morn":24.17},"feels_like":{"day":32.34,"night":23.74,"eve":29.84,"morn":19.85},"pressure":1032,"humidity":67,"dew_point":26.62,"wind_speed":3.96,"wind_deg":174,"wind_gust":3.44,"weather":[{"id":803,"main":"Clouds","description":"broken
         clouds","icon":"04d"}],"clouds":70,"pop":0,"uvi":2},{"dt":1668625200,"sunrise":1668612125,"sunset":1668645342,"moonrise":1668671400,"moonset":1668635820,"moon_phase":0.75,"temp":{"day":32.54,"min":24.31,"max":32.72,"night":25.25,"eve":28.02,"morn":27.59},"feels_like":{"day":32.54,"night":20.55,"eve":28.02,"morn":21.97},"pressure":1023,"humidity":60,"dew_point":24.19,"wind_speed":4.92,"wind_deg":193,"wind_gust":5.12,"weather":[{"id":601,"main":"Snow","description":"snow","icon":"13d"}],"clouds":59,"pop":0.63,"snow":1.2,"uvi":2}]}'
-  recorded_at: Wed, 09 Nov 2022 23:12:52 GMT
-- request:
-    method: get
-    uri: https://api.openweathermap.org/data/3.0/onecall?appid=da340bec0df452f76f0fd81ae3215450&exclude=minutely,hourly&lat=47.98&lon=-123.49&units=imperial
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      User-Agent:
-      - Faraday v2.6.0
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Server:
-      - openresty
-      Date:
-      - Wed, 09 Nov 2022 23:12:52 GMT
-      Content-Type:
-      - application/json; charset=utf-8
-      Content-Length:
-      - '4221'
-      Connection:
-      - keep-alive
-      X-Cache-Key:
-      - "/data/3.0/onecall?exclude=minutely%2Chourly&lat=47.98&lon=-123.49&units=imperial"
-      Access-Control-Allow-Origin:
-      - "*"
-      Access-Control-Allow-Credentials:
-      - 'true'
-      Access-Control-Allow-Methods:
-      - GET, POST
-    body:
-      encoding: UTF-8
-      string: '{"lat":47.98,"lon":-123.49,"timezone":"America/Los_Angeles","timezone_offset":-28800,"current":{"dt":1668035572,"sunrise":1668006682,"sunset":1668041059,"temp":26.56,"feels_like":21.09,"pressure":1021,"humidity":73,"dew_point":19.94,"uvi":0.52,"clouds":0,"visibility":10000,"wind_speed":4.61,"wind_deg":90,"weather":[{"id":800,"main":"Clear","description":"clear
-        sky","icon":"01d"}]},"daily":[{"dt":1668020400,"sunrise":1668006682,"sunset":1668041059,"moonrise":1668043140,"moonset":1668012060,"moon_phase":0.54,"temp":{"day":29.62,"min":16.41,"max":29.62,"night":19.11,"eve":24.33,"morn":18.68},"feels_like":{"day":26.53,"night":12.65,"eve":19.99,"morn":12.52},"pressure":1018,"humidity":67,"dew_point":21.11,"wind_speed":4.54,"wind_deg":187,"wind_gust":4.61,"weather":[{"id":800,"main":"Clear","description":"clear
-        sky","icon":"01d"}],"clouds":10,"pop":0,"uvi":1.4},{"dt":1668106800,"sunrise":1668093175,"sunset":1668127379,"moonrise":1668131580,"moonset":1668102660,"moon_phase":0.58,"temp":{"day":30.33,"min":18.93,"max":31.23,"night":24.13,"eve":23.85,"morn":19.72},"feels_like":{"day":30.33,"night":24.13,"eve":23.85,"morn":13.39},"pressure":1028,"humidity":67,"dew_point":24.73,"wind_speed":4.54,"wind_deg":193,"wind_gust":5.19,"weather":[{"id":802,"main":"Clouds","description":"scattered
-        clouds","icon":"03d"}],"clouds":37,"pop":0,"uvi":1.53},{"dt":1668193200,"sunrise":1668179668,"sunset":1668213701,"moonrise":1668220500,"moonset":1668192900,"moon_phase":0.61,"temp":{"day":29.21,"min":23.77,"max":30.7,"night":25.03,"eve":25.7,"morn":25.43},"feels_like":{"day":25.68,"night":20.97,"eve":25.7,"morn":25.43},"pressure":1020,"humidity":80,"dew_point":28.15,"wind_speed":3.42,"wind_deg":68,"wind_gust":4.74,"weather":[{"id":804,"main":"Clouds","description":"overcast
-        clouds","icon":"04d"}],"clouds":100,"pop":0,"uvi":0.97},{"dt":1668279600,"sunrise":1668266160,"sunset":1668300025,"moonrise":1668310020,"moonset":1668282600,"moon_phase":0.64,"temp":{"day":33.94,"min":24.15,"max":34.52,"night":25.03,"eve":26.37,"morn":24.3},"feels_like":{"day":33.94,"night":20.1,"eve":22.32,"morn":24.3},"pressure":1021,"humidity":72,"dew_point":29.95,"wind_speed":3.94,"wind_deg":190,"wind_gust":3.31,"weather":[{"id":800,"main":"Clear","description":"clear
-        sky","icon":"01d"}],"clouds":6,"pop":0,"uvi":1.35},{"dt":1668366000,"sunrise":1668352652,"sunset":1668386351,"moonrise":1668400020,"moonset":1668371640,"moon_phase":0.67,"temp":{"day":31.84,"min":23.94,"max":31.98,"night":26.55,"eve":26.67,"morn":24.12},"feels_like":{"day":28.69,"night":26.55,"eve":26.67,"morn":19.2},"pressure":1026,"humidity":79,"dew_point":30.24,"wind_speed":4.03,"wind_deg":182,"wind_gust":3.49,"weather":[{"id":803,"main":"Clouds","description":"broken
-        clouds","icon":"04d"}],"clouds":80,"pop":0,"uvi":1.29},{"dt":1668452400,"sunrise":1668439143,"sunset":1668472680,"moonrise":1668490380,"moonset":1668460140,"moon_phase":0.7,"temp":{"day":28.67,"min":24.98,"max":30.92,"night":25.02,"eve":28.02,"morn":25.43},"feels_like":{"day":28.67,"night":21.11,"eve":28.02,"morn":25.43},"pressure":1028,"humidity":84,"dew_point":28.78,"wind_speed":3.51,"wind_deg":36,"wind_gust":3.47,"weather":[{"id":804,"main":"Clouds","description":"overcast
-        clouds","icon":"04d"}],"clouds":98,"pop":0,"uvi":2},{"dt":1668538800,"sunrise":1668525634,"sunset":1668559010,"moonrise":1668580800,"moonset":1668548160,"moon_phase":0.73,"temp":{"day":32.34,"min":23.97,"max":35.49,"night":28.2,"eve":29.84,"morn":24.17},"feels_like":{"day":32.34,"night":23.74,"eve":29.84,"morn":19.85},"pressure":1032,"humidity":67,"dew_point":26.62,"wind_speed":3.96,"wind_deg":174,"wind_gust":3.44,"weather":[{"id":803,"main":"Clouds","description":"broken
-        clouds","icon":"04d"}],"clouds":70,"pop":0,"uvi":2},{"dt":1668625200,"sunrise":1668612125,"sunset":1668645342,"moonrise":1668671400,"moonset":1668635820,"moon_phase":0.75,"temp":{"day":32.54,"min":24.31,"max":32.72,"night":25.25,"eve":28.02,"morn":27.59},"feels_like":{"day":32.54,"night":20.55,"eve":28.02,"morn":21.97},"pressure":1023,"humidity":60,"dew_point":24.19,"wind_speed":4.92,"wind_deg":193,"wind_gust":5.12,"weather":[{"id":601,"main":"Snow","description":"snow","icon":"13d"}],"clouds":59,"pop":0.63,"snow":1.2,"uvi":2}]}'
-  recorded_at: Wed, 09 Nov 2022 23:12:52 GMT
+  recorded_at: Wed, 09 Nov 2022 23:12:53 GMT
 recorded_with: VCR 6.1.0
