--- a/spec/fixtures/vcr_cassettes/Area/has_attributes.yml
+++ b/spec/fixtures/vcr_cassettes/Area/has_attributes.yml
@@ -19,7 +19,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Tue, 08 Nov 2022 02:47:43 GMT
+      - Wed, 09 Nov 2022 23:12:51 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -39,7 +39,7 @@ http_interactions:
       Access-Control-Allow-Methods:
       - GET, POST, PUT, DELETE, OPTIONS
       X-Cache:
-      - EXPIRED
+      - HIT
     body:
       encoding: ASCII-8BIT
       string: '{"type":"FeatureCollection","features":[{"type":"Feature","id":419,"properties":{"name":"Olympics","center":"Northwest
@@ -83,51 +83,5 @@ http_interactions:
         for signs of unstable snow such as recent avalanches, cracking in the snow,
         and audible collapsing. Avoid traveling on or under similar slopes.","danger":"no
         rating","danger_level":-1,"color":"#888888","stroke":"#104efb","font_color":"#ffffff","link":"http:\/\/www.nwac.us\/avalanche-forecast\/#\/east-slopes-south","start_date":"2022-11-04T22:00:00","end_date":"2022-11-17T02:30:00","fillOpacity":0.5,"fillIncrement":0.1,"warning":{"product":null}},"geometry":{"type":"Polygon","coordinates":[[[-121.2752,47.1902],[-120.9853,47.079],[-120.7385,46.9962],[-120.7286,46.7882],[-120.7285,46.7724],[-120.7361,46.7588],[-120.7936,46.741],[-120.8262,46.7186],[-120.8545,46.6792],[-120.8484,46.5267],[-120.9109,46.4125],[-120.9833,46.1317],[-121.1595,46.0161],[-121.5113,45.8909],[-121.4199,46.1756],[-121.4012,46.2637],[-121.3836,46.2947],[-121.3318,46.3882],[-121.3398,46.5612],[-121.2895,46.6344],[-121.3471,46.7218],[-121.4041,46.7863],[-121.4584,46.8417],[-121.456,46.8917],[-121.4368,46.9169],[-121.4054,46.9414],[-121.2975,47.1426],[-121.2752,47.1902]]]}}],"start_time":null,"end_time":null}'
-  recorded_at: Tue, 08 Nov 2022 02:47:43 GMT
-- request:
-    method: get
-    uri: https://api.openweathermap.org/data/3.0/onecall?appid=4629ddd2925e26386120921b9b369703&exclude=minutely,hourly&lat=47.98&lon=-123.49&units=imperial
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      User-Agent:
-      - Faraday v2.6.0
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Server:
-      - openresty
-      Date:
-      - Tue, 08 Nov 2022 02:47:43 GMT
-      Content-Type:
-      - application/json; charset=utf-8
-      Content-Length:
-      - '4308'
-      Connection:
-      - keep-alive
-      X-Cache-Key:
-      - "/data/3.0/onecall?exclude=minutely%2Chourly&lat=47.98&lon=-123.49&units=imperial"
-      Access-Control-Allow-Origin:
-      - "*"
-      Access-Control-Allow-Credentials:
-      - 'true'
-      Access-Control-Allow-Methods:
-      - GET, POST
-    body:
-      encoding: UTF-8
-      string: '{"lat":47.98,"lon":-123.49,"timezone":"America/Los_Angeles","timezone_offset":-28800,"current":{"dt":1667875663,"sunrise":1667833696,"sunset":1667868424,"temp":17.51,"feels_like":4.91,"pressure":1006,"humidity":96,"dew_point":16.66,"uvi":0,"clouds":100,"visibility":3219,"wind_speed":25.32,"wind_deg":30,"wind_gust":33.38,"weather":[{"id":701,"main":"Mist","description":"mist","icon":"50n"},{"id":601,"main":"Snow","description":"snow","icon":"13n"}],"snow":{"1h":1.85}},"daily":[{"dt":1667847600,"sunrise":1667833696,"sunset":1667868424,"moonrise":1667867460,"moonset":1667830440,"moon_phase":0.48,"temp":{"day":21.92,"min":14.77,"max":22.6,"night":14.77,"eve":18.23,"morn":21.9},"feels_like":{"day":14.86,"night":14.77,"eve":10.62,"morn":17.22},"pressure":1004,"humidity":95,"dew_point":25.05,"wind_speed":5.99,"wind_deg":13,"wind_gust":9.75,"weather":[{"id":601,"main":"Snow","description":"snow","icon":"13d"}],"clouds":100,"pop":0.93,"snow":25,"uvi":0.5},{"dt":1667934000,"sunrise":1667920189,"sunset":1667954740,"moonrise":1667955120,"moonset":1667921280,"moon_phase":0.5,"temp":{"day":16.9,"min":7.92,"max":18.12,"night":13.08,"eve":10.81,"morn":10.4},"feels_like":{"day":8.74,"night":5.07,"eve":3.67,"morn":3.74},"pressure":1019,"humidity":90,"dew_point":18.54,"wind_speed":5.53,"wind_deg":61,"wind_gust":8.37,"weather":[{"id":601,"main":"Snow","description":"snow","icon":"13d"}],"clouds":88,"pop":0.73,"snow":2.32,"uvi":1.04},{"dt":1668020400,"sunrise":1668006682,"sunset":1668041059,"moonrise":1668043140,"moonset":1668012060,"moon_phase":0.54,"temp":{"day":26.24,"min":12.61,"max":26.56,"night":15.1,"eve":18.39,"morn":13.51},"feels_like":{"day":26.24,"night":6.28,"eve":13.08,"morn":4.73},"pressure":1018,"humidity":85,"dew_point":26.58,"wind_speed":5.84,"wind_deg":188,"wind_gust":5.82,"weather":[{"id":800,"main":"Clear","description":"clear
-        sky","icon":"01d"}],"clouds":5,"pop":0,"uvi":1.39},{"dt":1668106800,"sunrise":1668093175,"sunset":1668127379,"moonrise":1668131580,"moonset":1668102660,"moon_phase":0.58,"temp":{"day":26.47,"min":14.4,"max":27.39,"night":20.98,"eve":24.01,"morn":14.65},"feels_like":{"day":26.47,"night":16.34,"eve":24.01,"morn":6.26},"pressure":1029,"humidity":90,"dew_point":28.51,"wind_speed":6.02,"wind_deg":184,"wind_gust":5.84,"weather":[{"id":801,"main":"Clouds","description":"few
-        clouds","icon":"02d"}],"clouds":11,"pop":0,"uvi":1.52},{"dt":1668193200,"sunrise":1668179668,"sunset":1668213701,"moonrise":1668220500,"moonset":1668192900,"moon_phase":0.61,"temp":{"day":27.86,"min":20.73,"max":29.25,"night":20.73,"eve":25.74,"morn":21.22},"feels_like":{"day":27.86,"night":14.68,"eve":25.74,"morn":15.96},"pressure":1022,"humidity":95,"dew_point":30.99,"wind_speed":4.29,"wind_deg":181,"wind_gust":3.91,"weather":[{"id":804,"main":"Clouds","description":"overcast
-        clouds","icon":"04d"}],"clouds":100,"pop":0.01,"uvi":0.98},{"dt":1668279600,"sunrise":1668266160,"sunset":1668300025,"moonrise":1668310020,"moonset":1668282600,"moon_phase":0.64,"temp":{"day":29.1,"min":20.3,"max":29.75,"night":22.66,"eve":28.76,"morn":22.6},"feels_like":{"day":29.1,"night":16.99,"eve":28.76,"morn":17.64},"pressure":1022,"humidity":92,"dew_point":31.5,"wind_speed":5.19,"wind_deg":177,"wind_gust":3.91,"weather":[{"id":803,"main":"Clouds","description":"broken
-        clouds","icon":"04d"}],"clouds":54,"pop":0.02,"uvi":1},{"dt":1668366000,"sunrise":1668352652,"sunset":1668386351,"moonrise":1668400020,"moonset":1668371640,"moon_phase":0.67,"temp":{"day":29.8,"min":22.15,"max":30.58,"night":25.21,"eve":28.29,"morn":22.15},"feels_like":{"day":29.8,"night":19.96,"eve":28.29,"morn":16.25},"pressure":1026,"humidity":90,"dew_point":31.69,"wind_speed":4.36,"wind_deg":174,"wind_gust":3.71,"weather":[{"id":803,"main":"Clouds","description":"broken
-        clouds","icon":"04d"}],"clouds":56,"pop":0,"uvi":1},{"dt":1668452400,"sunrise":1668439143,"sunset":1668472680,"moonrise":1668490380,"moonset":1668460140,"moon_phase":0.7,"temp":{"day":31.6,"min":24.87,"max":31.6,"night":27.34,"eve":30.51,"morn":27.84},"feels_like":{"day":31.6,"night":27.34,"eve":30.51,"morn":27.84},"pressure":1024,"humidity":89,"dew_point":33.06,"wind_speed":3.78,"wind_deg":169,"wind_gust":3.36,"weather":[{"id":600,"main":"Snow","description":"light
-        snow","icon":"13d"}],"clouds":98,"pop":0.2,"snow":0.23,"uvi":1}]}'
-  recorded_at: Tue, 08 Nov 2022 02:47:43 GMT
+  recorded_at: Wed, 09 Nov 2022 23:12:51 GMT
 recorded_with: VCR 6.1.0
