--- a/spec/fixtures/vcr_cassettes/OpenWeather_API/Daily_Forecast_Endpoint/returns_a_forecast_for_daily_weather.yml
+++ b/spec/fixtures/vcr_cassettes/OpenWeather_API/Daily_Forecast_Endpoint/returns_a_forecast_for_daily_weather.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.openweathermap.org/data/3.0/onecall?appid=4629ddd2925e26386120921b9b369703&exclude=minutely,hourly&lat=47.427&lon=-121.418&units=imperial
+    uri: https://api.openweathermap.org/data/3.0/onecall?appid=da340bec0df452f76f0fd81ae3215450&exclude=minutely,hourly&lat=47.427&lon=-121.418&units=imperial
     body:
       encoding: US-ASCII
       string: ''
@@ -21,11 +21,11 @@ http_interactions:
       Server:
       - openresty
       Date:
-      - Tue, 08 Nov 2022 02:47:44 GMT
+      - Wed, 09 Nov 2022 23:13:03 GMT
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
-      - '4254'
+      - '4242'
       Connection:
       - keep-alive
       X-Cache-Key:
@@ -38,14 +38,15 @@ http_interactions:
       - GET, POST
     body:
       encoding: UTF-8
-      string: '{"lat":47.427,"lon":-121.418,"timezone":"America/Los_Angeles","timezone_offset":-28800,"current":{"dt":1667875664,"sunrise":1667833112,"sunset":1667868013,"temp":29.71,"feels_like":24.51,"pressure":1003,"humidity":93,"dew_point":28.15,"uvi":0,"clouds":100,"visibility":10000,"wind_speed":4.88,"wind_deg":95,"wind_gust":6.31,"weather":[{"id":804,"main":"Clouds","description":"overcast
-        clouds","icon":"04n"}]},"daily":[{"dt":1667847600,"sunrise":1667833112,"sunset":1667868013,"moonrise":1667866980,"moonset":1667829840,"moon_phase":0.48,"temp":{"day":34.05,"min":25.3,"max":35.1,"night":25.3,"eve":29.35,"morn":28.76},"feels_like":{"day":34.05,"night":18.46,"eve":24.06,"morn":28.76},"pressure":1003,"humidity":80,"dew_point":27.18,"wind_speed":5.77,"wind_deg":90,"wind_gust":9.98,"weather":[{"id":601,"main":"Snow","description":"snow","icon":"13d"}],"clouds":100,"pop":1,"snow":9.23,"uvi":1.04},{"dt":1667934000,"sunrise":1667919603,"sunset":1667954332,"moonrise":1667954760,"moonset":1667920680,"moon_phase":0.5,"temp":{"day":33.33,"min":19.06,"max":34.95,"night":20.1,"eve":24.89,"morn":19.13},"feels_like":{"day":29.73,"night":13.26,"eve":18.88,"morn":10.92},"pressure":1015,"humidity":85,"dew_point":27.91,"wind_speed":6.4,"wind_deg":88,"wind_gust":8.39,"weather":[{"id":804,"main":"Clouds","description":"overcast
-        clouds","icon":"04d"}],"clouds":91,"pop":0.37,"uvi":0.81},{"dt":1668020400,"sunrise":1668006094,"sunset":1668040652,"moonrise":1668042780,"moonset":1668011400,"moon_phase":0.54,"temp":{"day":33.19,"min":17.08,"max":33.67,"night":17.11,"eve":20.7,"morn":17.83},"feels_like":{"day":29.46,"night":17.11,"eve":20.7,"morn":17.83},"pressure":1018,"humidity":86,"dew_point":28.09,"wind_speed":4.85,"wind_deg":280,"wind_gust":5.91,"weather":[{"id":800,"main":"Clear","description":"clear
-        sky","icon":"01d"}],"clouds":6,"pop":0,"uvi":1.31},{"dt":1668106800,"sunrise":1668092585,"sunset":1668126974,"moonrise":1668131220,"moonset":1668102000,"moon_phase":0.58,"temp":{"day":32.95,"min":17.98,"max":33.35,"night":22.82,"eve":25.7,"morn":19.44},"feels_like":{"day":32.95,"night":15.6,"eve":25.7,"morn":19.44},"pressure":1029,"humidity":84,"dew_point":27.01,"wind_speed":5.68,"wind_deg":102,"wind_gust":6.89,"weather":[{"id":804,"main":"Clouds","description":"overcast
-        clouds","icon":"04d"}],"clouds":95,"pop":0,"uvi":1.13},{"dt":1668193200,"sunrise":1668179076,"sunset":1668213298,"moonrise":1668220140,"moonset":1668192180,"moon_phase":0.61,"temp":{"day":30.49,"min":21.33,"max":31.71,"night":21.4,"eve":24.76,"morn":22.26},"feels_like":{"day":23.47,"night":13.15,"eve":16.7,"morn":13.75},"pressure":1026,"humidity":84,"dew_point":24.73,"wind_speed":7.54,"wind_deg":108,"wind_gust":10.42,"weather":[{"id":804,"main":"Clouds","description":"overcast
-        clouds","icon":"04d"}],"clouds":100,"pop":0,"uvi":1.26},{"dt":1668279600,"sunrise":1668265566,"sunset":1668299624,"moonrise":1668309720,"moonset":1668281880,"moon_phase":0.64,"temp":{"day":32.59,"min":21.07,"max":37.65,"night":27.88,"eve":32.85,"morn":21.25},"feels_like":{"day":29.79,"night":27.88,"eve":32.85,"morn":13.5},"pressure":1023,"humidity":79,"dew_point":25.29,"wind_speed":6.67,"wind_deg":102,"wind_gust":7.92,"weather":[{"id":802,"main":"Clouds","description":"scattered
-        clouds","icon":"03d"}],"clouds":41,"pop":0,"uvi":2},{"dt":1668366000,"sunrise":1668352056,"sunset":1668385952,"moonrise":1668399660,"moonset":1668370920,"moon_phase":0.67,"temp":{"day":34.5,"min":24.28,"max":36.99,"night":26.01,"eve":32.63,"morn":24.71},"feels_like":{"day":31.8,"night":18.99,"eve":28.27,"morn":20.21},"pressure":1027,"humidity":86,"dew_point":29.39,"wind_speed":6.13,"wind_deg":104,"wind_gust":7.78,"weather":[{"id":802,"main":"Clouds","description":"scattered
-        clouds","icon":"03d"}],"clouds":30,"pop":0,"uvi":2},{"dt":1668452400,"sunrise":1668438546,"sunset":1668472282,"moonrise":1668490020,"moonset":1668459420,"moon_phase":0.7,"temp":{"day":35.42,"min":25.66,"max":40.08,"night":33.78,"eve":35.49,"morn":25.7},"feels_like":{"day":31.01,"night":29.61,"eve":35.49,"morn":18.55},"pressure":1025,"humidity":82,"dew_point":28.89,"wind_speed":6.31,"wind_deg":100,"wind_gust":7.99,"weather":[{"id":803,"main":"Clouds","description":"broken
-        clouds","icon":"04d"}],"clouds":83,"pop":0.09,"uvi":2}]}'
-  recorded_at: Tue, 08 Nov 2022 02:47:44 GMT
+      string: '{"lat":47.43,"lon":-121.42,"timezone":"America/Los_Angeles","timezone_offset":-28800,"current":{"dt":1668035578,"sunrise":1668006095,"sunset":1668040652,"temp":34.27,"feels_like":29.12,"pressure":1016,"humidity":91,"dew_point":31.93,"uvi":0.47,"clouds":0,"visibility":10000,"wind_speed":5.75,"wind_deg":230,"weather":[{"id":800,"main":"Clear","description":"clear
+        sky","icon":"01d"}]},"daily":[{"dt":1668020400,"sunrise":1668006095,"sunset":1668040652,"moonrise":1668042780,"moonset":1668011400,"moon_phase":0.54,"temp":{"day":34.59,"min":18.46,"max":35.01,"night":18.46,"eve":29.52,"morn":19.67},"feels_like":{"day":30.87,"night":18.46,"eve":29.52,"morn":19.67},"pressure":1017,"humidity":83,"dew_point":30.22,"wind_speed":5.01,"wind_deg":280,"wind_gust":6.87,"weather":[{"id":800,"main":"Clear","description":"clear
+        sky","icon":"01d"}],"clouds":5,"pop":0,"uvi":1.34},{"dt":1668106800,"sunrise":1668092586,"sunset":1668126974,"moonrise":1668131220,"moonset":1668102000,"moon_phase":0.58,"temp":{"day":33.98,"min":19.33,"max":35.55,"night":23.5,"eve":25.16,"morn":26.29},"feels_like":{"day":33.98,"night":16.83,"eve":21.15,"morn":26.29},"pressure":1028,"humidity":79,"dew_point":26.44,"wind_speed":5.26,"wind_deg":101,"wind_gust":5.64,"weather":[{"id":804,"main":"Clouds","description":"overcast
+        clouds","icon":"04d"}],"clouds":95,"pop":0,"uvi":1.35},{"dt":1668193200,"sunrise":1668179077,"sunset":1668213298,"moonrise":1668220140,"moonset":1668192180,"moon_phase":0.61,"temp":{"day":31.39,"min":22.68,"max":33.35,"night":24.67,"eve":29.26,"morn":23.68},"feels_like":{"day":24.78,"night":17.29,"eve":22.23,"morn":15.49},"pressure":1024,"humidity":81,"dew_point":24.53,"wind_speed":7.16,"wind_deg":105,"wind_gust":9.73,"weather":[{"id":804,"main":"Clouds","description":"overcast
+        clouds","icon":"04d"}],"clouds":100,"pop":0.05,"uvi":0.93},{"dt":1668279600,"sunrise":1668265567,"sunset":1668299624,"moonrise":1668309720,"moonset":1668281880,"moon_phase":0.64,"temp":{"day":35.83,"min":24.21,"max":40.23,"night":26.42,"eve":34.83,"morn":24.39},"feels_like":{"day":33.49,"night":26.42,"eve":34.83,"morn":17.37},"pressure":1022,"humidity":74,"dew_point":26.42,"wind_speed":6.15,"wind_deg":101,"wind_gust":7.43,"weather":[{"id":802,"main":"Clouds","description":"scattered
+        clouds","icon":"03d"}],"clouds":32,"pop":0,"uvi":1.33},{"dt":1668366000,"sunrise":1668352057,"sunset":1668385952,"moonrise":1668399660,"moonset":1668370920,"moon_phase":0.67,"temp":{"day":36.73,"min":24.66,"max":38.91,"night":32.76,"eve":35.42,"morn":25.14},"feels_like":{"day":36.73,"night":32.76,"eve":35.42,"morn":25.14},"pressure":1025,"humidity":80,"dew_point":29.53,"wind_speed":3.13,"wind_deg":287,"wind_gust":3.42,"weather":[{"id":801,"main":"Clouds","description":"few
+        clouds","icon":"02d"}],"clouds":18,"pop":0,"uvi":1.45},{"dt":1668452400,"sunrise":1668438547,"sunset":1668472282,"moonrise":1668490020,"moonset":1668459420,"moon_phase":0.7,"temp":{"day":34.12,"min":25.02,"max":37.78,"night":25.02,"eve":32.67,"morn":26.71},"feels_like":{"day":28.99,"night":17.17,"eve":27.19,"morn":20.61},"pressure":1029,"humidity":80,"dew_point":27.01,"wind_speed":6.89,"wind_deg":101,"wind_gust":8.72,"weather":[{"id":804,"main":"Clouds","description":"overcast
+        clouds","icon":"04d"}],"clouds":87,"pop":0,"uvi":2},{"dt":1668538800,"sunrise":1668525036,"sunset":1668558614,"moonrise":1668580440,"moonset":1668547500,"moon_phase":0.73,"temp":{"day":35.65,"min":24.64,"max":40.32,"night":27.82,"eve":34.03,"morn":24.93},"feels_like":{"day":30.11,"night":20.91,"eve":28.67,"morn":16.86},"pressure":1034,"humidity":68,"dew_point":24.22,"wind_speed":7.18,"wind_deg":102,"wind_gust":9.19,"weather":[{"id":803,"main":"Clouds","description":"broken
+        clouds","icon":"04d"}],"clouds":61,"pop":0,"uvi":2},{"dt":1668625200,"sunrise":1668611525,"sunset":1668644948,"moonrise":1668670980,"moonset":1668635280,"moon_phase":0.75,"temp":{"day":37.31,"min":27.03,"max":40.21,"night":27.16,"eve":33.58,"morn":27.27},"feels_like":{"day":37.31,"night":21.47,"eve":33.58,"morn":21.83},"pressure":1024,"humidity":58,"dew_point":22.05,"wind_speed":5.88,"wind_deg":104,"wind_gust":6.91,"weather":[{"id":802,"main":"Clouds","description":"scattered
+        clouds","icon":"03d"}],"clouds":49,"pop":0.02,"uvi":2}]}'
+  recorded_at: Wed, 09 Nov 2022 23:13:03 GMT
 recorded_with: VCR 6.1.0
